--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,145 @@
-main {
-	flex-grow: 1;
-	text-align: center;
-	padding: 25px;
+@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
+
+* {
+  box-sizing: border-box;
 }
 
-footer {
-  padding: 2px;
-  min-height: 100px;
+/* GLOBAL STYLES */
+
+body,
+.App {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  font-size: 16px;
+  background: url(https://www.toptal.com/designers/subtlepatterns/patterns/lightpaperfibers.png);
+}
+
+button {
+  background: none;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  font-size: inherit;
+  font-family: inherit;
+  cursor: pointer;
+  color: #08c;
+}
+button:hover {
+  color: #04c;
+}
+
+.App {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background: #EEEEEE;
-  font-size: small;
-  text-align: center;
 }
 
-header {
+/* SIDEBAR STYLES */
+
+.app__sidebar {
+  width: 30%;
+  height: 100vh;
+  border-right: 1px solid #ddd;
+}
+
+.app__sidebar-header {
+  display: flex;
+  justify-content: space-between;
   padding: 25px;
+}
+.app__sidebar-header h1 {
+  margin: 0;
+}
+
+.app__sidebar-notes {
+  height: calc(100vh - 78px);
+  overflow-y: scroll;
+}
+.app__sidebar-note {
+  padding: 25px;
+  cursor: pointer;
+}
+.sidebar__note-title {
+  display: flex;
+  justify-content: space-between;
+}
+.app__sidebar-note button {
+  color: crimson;
+}
+.app__sidebar-note p {
+  margin: 10px 0;
+}
+.app__sidebar-note small {
+  display: block;
+  color: #999;
+}
+
+.app__sidebar-note:hover {
+  background: #ddd;
+}
+.app__sidebar-note.active,
+.app__sidebar-note.active small {
+  background: #08c;
+  color: white;
+}
+
+/* NOTE EDITOR/PREVIEW (MAIN) STYLES */
+
+.app__main {
+  width: 70%;
+  height: 100vh;
+}
+.app__main-note-edit,
+.app__main-note-preview {
+  height: 50vh;
+}
+
+.no__active-note {
+  width: 70%;
+  height: 100vh;
+  line-height: 100vh;
+  text-align: center;
+  font-size: 2rem;
+  color: #999;
+}
+
+/* Editing */
+.app__main-note-edit {
+  padding: 25px;
+}
+
+.app__main-note-edit input,
+textarea {
+  display: block;
+  border: 1px solid #ddd;
+  margin-bottom: 20px;
+  width: 100%;
+  height: calc(50vh - 130px);
+  padding: 10px;
+  resize: none;
+  font-size: inherit;
+  font-family: inherit;
+}
+.app__main-note-edit input {
+  height: 50px;
+  font-size: 2rem;
+}
+
+/* Preview */
+.app__main-note-preview {
+  border-top: 1px solid #ddd;
+  overflow-y: scroll;
+  background: rgba(0, 0, 0, 0.02);
+}
+
+.preview__title {
+  padding: 25px 25px 0 25px;
+  margin: 0;
+}
+
+.markdown__preview {
+  padding: 0 25px 25px 25px;
+  font-size: 1rem;
+  line-height: 2rem;
 }
