--- a/src/App.css
+++ b/src/App.css
@@ -95,7 +95,7 @@ button:hover {
   height: 50vh;
 }
 
-.no__active-note {
+.no-active-note {
   width: 70%;
   height: 100vh;
   line-height: 100vh;
